--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Website 2</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="heading">
+        <div class="head">
+            <h3>G3 Architects</h3> 
+         <div class="navigati">       
+                <ul class="nav-content">
+                    <li class="nav-item"><a class="dark-2" href="">Home</a></li>
+                    <li class="nav-item"><a class="dark-2" href="">About</a></li>
+                    <li class="nav-item"><a class="dark-2" href="">Contact Us</a></li>
+                    <li class="nav-item"><a class="dark-2"href="">Login</a></li>
+                </ul>
+         </div>
+        </div>
+        <div>
+            <h3 class="brand-title">Brand New<br>Group of Architects</h3>
+            <p class=" brand-description dark-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br>some form, by injected humour, or randomised words which don't look even</p>   
+        </div>
+        <div class="btn"><button class="btn-primary">Explore More</button></div>
+        <div class="banner">
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
