--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="heading">
         <div class="head">
             <h3>G3 Architects</h3> 
-         <div class="navigati">       
+         <div class="navigation">       
                 <ul class="nav-content">
                     <li class="nav-item"><a class="dark-2" href="">Home</a></li>
                     <li class="nav-item"><a class="dark-2" href="">About</a></li>
@@ -29,7 +29,9 @@
         </div>
     </header>
     <main>
-
+        <section>
+            
+        </section>
     </main>
     <footer>
 
